# paseto-hs

./: .travis.yml  CHANGELOG.md  README.md  paseto-hs.cabal
src/: PasetoHs.hs  Prelude.hs
src/Crypto/: Paseto.hs
src/Crypto/Paseto/: Common.hs  Version1.hs
test/: Spec.hs
